Fixing more hardcoded links
These were mostly in the change password templates.

--- a/django_project/templates/registration/password_change_form.html
+++ b/django_project/templates/registration/password_change_form.html
@@ -7,7 +7,7 @@
 {% block body_block %}
     <div class="hero-unit">
         <h2>Change Password</h2>
-        <form method="post" action=".">
+        <form method="post" action="{% url 'change_password' %}">
             {{form.as_p}}
             <input type="submit" value="Change" />
             {% csrf_token %}
