--- a/django_project/templates/registration/password_change_done.html
+++ b/django_project/templates/registration/password_change_done.html
@@ -7,6 +7,6 @@
 {% block body_block %}
     <div class="hero-unit">
         <h2>Password Changed</h2>
-        <p>Your password has been changed successfully. Please <a href="/login">login</a> with your new credentials, or return to the <a href="/">Home page</a></p>
+        <p>Your password has been changed successfully. Please <a href="{% url 'login' %}">login</a> with your new credentials, or return to the <a href="{% url 'home' %}">Home page</a></p>
     </div>
 {% endblock %}
