--- a/django_project/templates/treasure/base.html
+++ b/django_project/templates/treasure/base.html
@@ -94,12 +94,12 @@
 									<li><a href="{% url 'my_homepage' %}#" id="home-link" class="skel-layers-ignoreHref"><span>My Page</span></a></li>
 									<li><a href="{% url 'my_homepage' %}#myresources" class="skel-layers-ignoreHref"><span>My Resources</span></a></li>
                                     <li><a href="{% url 'my_homepage' %}#mypacks" class="skel-layers-ignoreHref"><span>My Packs</span></a></li>
-									<li><a href="{% url 'profile' %}/" class="skel-layers-ignoreHref"><span>My Profile</span></a></li>
-									<li><a href="{% url 'contribution' %}/" class="skel-layers-ignoreHref"><span>My Contribution</span></a></li>
-									<li><a href="{% url 'help' %}/" class="skel-layers-ignoreHref"><span>Help</span></a></li>
+									<li><a href="{% url 'profile' %}" class="skel-layers-ignoreHref"><span>My Profile</span></a></li>
+									<li><a href="{% url 'contribution' %}" class="skel-layers-ignoreHref"><span>My Contribution</span></a></li>
+									<li><a href="{% url 'help' %}" class="skel-layers-ignoreHref"><span>Help</span></a></li>
 								{% else %}									
-									<li><a href="{% url 'login' %}/" class="skel-layers-ignoreHref"><span>Login</span></a></li>
-									<li><a href="{% url 'register' %}/" class="skel-layers-ignoreHref"><span>Register</span></a></li>
+									<li><a href="{% url 'login' %}" class="skel-layers-ignoreHref"><span>Login</span></a></li>
+									<li><a href="{% url 'register' %}" class="skel-layers-ignoreHref"><span>Register</span></a></li>
                                     <li><a href="/auth/login/google-oauth2/"><span>Login with Google</span></a></li>									
 								{% endif %}			         
 							</ul>
