--- a/django_project/templates/treasure/index.html
+++ b/django_project/templates/treasure/index.html
@@ -107,7 +107,7 @@
 
 {% else %}
     <div class="hero-unit">
-        <h3>Please <a href="/login">Login</a> or <a href="/register">Register</a>.</h3>
+        <h3>Please <a href="{% url 'login' %}">Login</a> or <a href="{% url 'register' %}">Register</a>.</h3>
     </div>
 {% endif %}
 
