--- a/django_project/templates/treasure/profile.html
+++ b/django_project/templates/treasure/profile.html
@@ -17,7 +17,7 @@
 			<li><input type="text" value="{{user_email}}" disabled="disabled"></li>
 			<li>Password</li>
 			<li><input type="text" value="************" disabled="disabled">
-			    <a href="/change_password/">Change your password?</a>
+			    <a href="{% url 'change_password' %}">Change your password?</a>
 			</li>
 			<li>First Name</li>
 			<li><input type="text" value="{{user_firstname}}" disabled="disabled"></li>
@@ -36,7 +36,7 @@
 				</ul>
 				{% else %} You have not added any hubs in your profile.{% endif %}</li>
 		</ul>
-		<a class="btn btn-primary" href="{% url 'editprofile' %}">Edit Profile</a>
+		<a class="btn btn-primary" href="{% url 'edit_profile' %}">Edit Profile</a>
     </div>
 {% else %}
 	<div class="hero-unit">
