--- a/django_project/templates/treasure/resource.html
+++ b/django_project/templates/treasure/resource.html
@@ -72,7 +72,7 @@
         
         <div class="hero-unit">
             <h3>Forum</h3>
-            <a href="{% url 'board' resource.id %}">Link2Forum</a>
+            <a href="{% url 'board' 'resource' resource.id %}">Link2Forum</a>
         </div>
         
         <div class="hero-unit">
