--- a/django_project/templates/treasure/forum.html
+++ b/django_project/templates/treasure/forum.html
@@ -1,5 +1,5 @@
 {% extends 'treasure/base.html' %}
-
+a
 {% load static %}
 
 {% block title %}
@@ -14,9 +14,9 @@
         <ul>
         {% for board in forum %}
             {% if board.resource != null %}
-            <li><a href="{% url 'board' board.resource.id %}">Resource: {{ board.title }}</a></li>
+            <li><a href="{% url 'board' board.boardtype board.resource.id %}">Resource: {{ board.title }}</a></li>
             {% else %}
-            <li><a href="{% url 'board' board.title %}}">Misc: {{ board.title }}</a></li>            
+            <li><a href="{% url 'board' board.boardtype board.id %}">{{ board.boardtype|capfirst }}: {{ board.title }}</a></li>            
             {% endif %}
         {% endfor %}
         </ul>
