This means users can go to the add school/hub page without losing the information they have entered already.  The forms are automatically filled in when they return to the registratin page.  When the data is submitted, the sessionstorage is cleared.

--- a/django_project/templates/treasure/add_school.html
+++ b/django_project/templates/treasure/add_school.html
@@ -32,4 +32,18 @@
         </form>
     </div>
 </div>
+
+<script type="text/javascript">
+$(document).ready(function () {
+    // get form
+    var form = document.getElementById('upload_form') || null;
+    // if there is a search in url
+    var value = location.search || null;
+    if(form && value) {
+        // update action
+        form.action = form.action + value;
+    }
+});
+</script>
+
 {% endblock %}
