--- a/django_project/templates/treasure/add_hub.html
+++ b/django_project/templates/treasure/add_hub.html
@@ -31,4 +31,17 @@
         </form>
     </div>
 </div>
+
+<script type="text/javascript">
+$(document).ready(function () {
+    // get form
+    var form = document.getElementById('upload_form') || null;
+    // if there is a search in url
+    var value = location.search || null;
+    if(form && value) {
+        // update action
+        form.action = form.action + value;
+    }
+});
+</script>
 {% endblock %}
