--- a/django_project/templates/treasure/packs.html
+++ b/django_project/templates/treasure/packs.html
@@ -44,11 +44,11 @@
                     </tbody>
                  </table>
             </div>
-        </div> <!-- close panel -->       
+        </div> <!-- close panel -->
         
     </div> <!-- close body -->
     <div class="span3 hero-unit">
-                        <form id="search_form" method="post" action="{% url 'packs' %}">            
+                        <form id="search_form" method="post" action="{% url 'packs' %}">
         
                     {% csrf_token %}
                         <div class="span3" style="margin-left:-2em">
@@ -96,7 +96,7 @@
             var value = $('.dataTables_filter input').val() || null;
             // update the action
             if(form && value) {
-                form.action = '/packs/?search='+value.replace(' ','+');
+                form.action = './?search='+value.replace(' ','+');
             }
         });
         // function to update form on update
@@ -104,7 +104,7 @@
             var value = $('.dataTables_filter input').val() || null;
             // update the action
             if(form && value) {
-                form.action = '/packs/?search='+value.replace(' ','+');
+                form.action = './?search='+value.replace(' ','+');
             }
         });
 	    
