--- a/django_project/templates/treasure/add_tag.html
+++ b/django_project/templates/treasure/add_tag.html
@@ -27,11 +27,23 @@
                 {{ field }}<br/>
             {% endfor %}
             
-            {% if popup %}<input type="hidden" name="_popup" value="1">{% endif %}
-
             <br/>
             <button class="btn btn-primary" type="submit" name="submit" tabindex='1'>Add Tag</button>
         </form>
     </div>
 </div>
+
+<script type="text/javascript">
+$(document).ready(function () {
+    // get form
+    var form = document.getElementById('upload_form') || null;
+    // if there is a search in url
+    var value = location.search || null;
+    if(form && value) {
+        // update action
+        form.action = form.action + value;
+    }
+});
+</script>
+
 {% endblock %}
