--- a/django_project/templates/treasure/edit_pack.html
+++ b/django_project/templates/treasure/edit_pack.html
@@ -25,7 +25,10 @@
 				    {% for field in form.visible_fields %}
 		                {{ field.errors }}
 		                {{field.label}}{% render_help_text field %}<br/>
-		                {{ field }}<br/>
+                    {{ field }}
+                    {% if field.label == "Other Tags" %}
+                    <a class="btn btn-info pull-right" href="{% url 'add_tag' %}?editpack,{{ pack_id }}">Add Tag</a>
+                    {% endif %}
 				    {% endfor %}
 				
 				
@@ -38,4 +41,35 @@
         {% endif %}
     </div>
 </div>
+
+<script type="text/javascript">
+$(document).ready(function () {
+    // fill in forms from sessionstorage
+    function init() {
+        if (sessionStorage["name"]) {
+            $('#id_name').val(sessionStorage["name"]);
+        }
+        if (sessionStorage["summary"]) {
+            $('#id_summary').val(sessionStorage["summary"]);
+        }
+        if (sessionStorage["description"]) {
+            $('#id_description').val(sessionStorage["description"]);
+        }
+    }
+    init();
+});
+
+$('input').on("keyup change blur", function () {
+    sessionStorage[$(this).attr('name')] = $(this).val();
+});
+$('textarea').on("keyup change blur", function () {
+    sessionStorage[$(this).attr('name')] = $(this).val();
+});
+
+$('button[name*="submit"]').click(function() {
+    // clear session storage when submitting the form
+    sessionStorage.clear();
+});
+</script>
+
 {% endblock %}
