--- a/django_project/templates/treasure/base.html
+++ b/django_project/templates/treasure/base.html
@@ -48,7 +48,7 @@
                             {% else %}
                             	<li><a href="{% url 'login' %}">Login</a></li>
                               <li><a href="{% url 'logout' %}">Register</a></li>
-                              <li><a href="/auth/login/google-oauth2/?next=/">Login with Google</a></li>   
+                              <li><a href="{% url 'home' %}login/google-oauth2">Login with Google</a></li>   
                             {% endif %}                   
                        </ul>
                        <ul class="nav">
@@ -100,7 +100,7 @@
 								{% else %}									
 									<li><a href="{% url 'login' %}" class="skel-layers-ignoreHref"><span>Login</span></a></li>
 									<li><a href="{% url 'register' %}" class="skel-layers-ignoreHref"><span>Register</span></a></li>
-                                    <li><a href="/auth/login/google-oauth2/"><span>Login with Google</span></a></li>									
+                                    <li><a href="{% url 'home' %}login/google-oauth2"><span>Login with Google</span></a></li>									
 								{% endif %}			         
 							</ul>
 						</nav>
