--- a/django_project/templates/treasure/index.html
+++ b/django_project/templates/treasure/index.html
@@ -28,7 +28,7 @@
 {% block body_block %}
 
 {% if user.is_authenticated %}
-<!--div class="span12">
+<div class="span12">
     <div class="span7 hero-unit">
         <h1>Plan C - Sharing</h1>
         <h4>Welcome to Plan C Sharing, blah bla......</h4><br>
@@ -102,7 +102,7 @@
         </ol>
     </div>
     
-</div--><div class="hero-unit">new main page goes here <!--replaces above--></div>
+</div><!--div class="hero-unit"><span class="icon-search"></span>new main page goes here <!--replaces above--></div>
 
 
 {% else %}
