Passing relevant data for forum view
There are now fields for lastpost/thread and num post/threads.  Now need
to make it look better

--- a/django_project/templates/treasure/board.html
+++ b/django_project/templates/treasure/board.html
@@ -24,7 +24,7 @@
         {% if board %}
         <ul>
             {% for thread in board %}
-            <li><a href="{% url 'thread' board_type board_url thread.id %}">{{ thread.title }}</a></li>
+            <li><a href="{% url 'thread' board_type board_url thread.id %}">{{ thread.title }} {{ thread.num_posts }} {{ thread.last_post }} {{ thread.author }}</a></li>
             {% endfor %}
         </ul>
         {% else %}
