--- a/django_project/templates/treasure/board.html
+++ b/django_project/templates/treasure/board.html
@@ -8,33 +8,75 @@
 
 {% block body_block %}
 
-<div class="span12 hero-unit">
+<div class="span11 hero-unit">
     
     {% if invalid %}
         <h4>No Board at this URL</h4>
         <a href="{% url 'forum' %}/">Return to the main forum</a>
     {% else %}
-    
+        
         {% if resource %}
-            <h3>Discussions on: <a href="{% url 'resource_view' resource.id %}">{{ resource.name }}</a><h3>
+            <h3>Discussions on: <a href="{% url 'resource_view' resource.id %}">{{ resource.name }}</a></h3>
         {% else %}
             <h3>Discussions about: {{ title|capfirst }}</h3>
         {% endif %}
+                
+        <a class="btn btn-primary" href="{% url 'new_thread' board_type board_url %}">New Thread</a><br><br>
         
         {% if board %}
-        <ul>
-            {% for thread in board %}
-            <li><a href="{% url 'thread' board_type board_url thread.id %}">{{ thread.title }} {{ thread.num_posts }} {{ thread.last_post }} {{ thread.author }}</a></li>
-            {% endfor %}
-        </ul>
+                
+            <div class="row panel-body">
+                <div class="span10 table-responsive" style="margin-left:0px">
+                    <table id="threadTable" class="table table-striped table-bordered" cellspacing="0" width="100%">
+                        <thead>
+                            <tr>
+                                <th>Thread Name</th>
+                                <th>Type</th>
+                                <th>Posted By</th>
+                                <th>Replies</th>
+                                <th>Last Post</th>
+                                <th>Created At</th>                                                              
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for thread in board %}
+                                {% if thread.restricted != 1 %}
+                                <tr>
+                                    <td><a href="{% url 'thread' board_type board_url thread.id %}">{{ thread.title }}</a></td>
+                                    {% if thread.threadtype == '0' %}
+                                    <td>Rating</td>
+                                    {% elif thread.threadtype == '1' %}
+                                    <td>Question</td>
+                                    {% elif thread.threadtype == '2' %}
+                                    <td>Discussion</td>
+                                    {% else %}
+                                    <td>No type!</td>
+                                    {% endif %}
+                                    <td>{{ thread.author }}</td>
+                                    <td>{{ thread.num_posts }}</td>
+                                    <td>{{ thread.last_post }}</td>
+                                    <td>{{ thread.datetime }}</td>
+                                </tr>
+                                {% endif %}
+                            {% endfor %}
+                        </tbody>
+                     </table>
+                </div>
+            </div> <!-- close panel -->
+
         {% else %}
             <h4>No Threads on this board</h4>
-        {% endif %}
-        
-    <a class="btn" href="{% url 'new_thread' board_type board_url %}">New Thread</a>
+        {% endif %}   
     
     {% endif %}
     
 </div>
+
+<!-- scripts for tables -->
+<script type="text/javascript">
+$(document).ready(function(){
+    $('#threadTable').DataTable();
+});
+</script>
 
 {% endblock %}
