--- a/django_project/templates/treasure/forum.html
+++ b/django_project/templates/treasure/forum.html
@@ -8,21 +8,120 @@ a
 
 {% block body_block %}
 
-<div class="span12 hero-unit">
-    <h3>Forum<h3>
-    {% if forum %}
-        <ul>
-        {% for board in forum %}
-            {% if board.resource != null %}
-            <li><a href="{% url 'board' board.boardtype board.resource.id %}">Resource: {{ board.title }}{{ board.num_threads }}{{  board.last_post }}{{ board.top }}</a></li>
-            {% else %}
-            <li><a href="{% url 'board' board.boardtype board.id %}">{{ board.boardtype|capfirst }}: {{ board.title }} Numposts: {{ board.thread__count }}</a></li>            
-            {% endif %}
-        {% endfor %}
-        </ul>
-    {% else %}
-        <h4>No Boards in Forum</h4>
+<div class="span11">
+    {% if level_boards or general_boards or resource_boards %}{% else %}<div class="hero-unit"><h4>No Boards in Forum</h4></class>{% endif %}
+
+    {% if level_boards %}
+    <div class="hero-unit">
+        {% if main_forum %}<h3><a href="{% url 'forum_type' 'level' %}">Level Forum</a></h3>
+        {% else %}<h3>Level Forum</h3>
+        {% endif %}
+        <div class="row panel-body">
+            <div class="span10 table-responsive" style="margin-left:0px">
+                <table id="levelBoardTable" class="table table-striped table-bordered" cellspacing="0" width="100%">
+                    <thead>
+                        <tr>
+                            <th>Board Name</th>
+                            <th>Number of Threads</th>
+                            <th>Last Thread</th>
+                            <th>Last Post</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for board in level_boards %}
+                            {% if board.restricted != 1 %}
+                            <tr>
+                                <td><a href="{% url 'board' board.boardtype board.id %}">{{ board.title }}</a></td>
+                                <td>{{ board.num_threads }}</td>
+                                <td>{{ board.last_thread }}</td>
+                                <td>{{ board.last_post }}</td>
+                            </tr>
+                            {% endif %}
+                        {% endfor %}
+                    </tbody>
+                 </table>
+            </div>
+        </div> <!-- close panel -->
+    </div>
     {% endif %}
+    
+    {% if general_boards %}
+    <div class="hero-unit">
+        {% if main_forum %}<h3><a href="{% url 'forum_type' 'general' %}">General Forum</a></h3>
+        {% else %}<h3>General Forum</h3>
+        {% endif %}
+        <div class="row panel-body">
+            <div class="span10 table-responsive" style="margin-left:0px">
+                <table id="generalBoardTable" class="table table-striped table-bordered" cellspacing="0" width="100%">
+                    <thead>
+                        <tr>
+                            <th>Board Name</th>
+                            <th>Number of Threads</th>
+                            <th>Last Thread</th>
+                            <th>Last Post</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for board in general_boards %}
+                            {% if board.restricted != 1 %}
+                            <tr>
+                                <td><a href="{% url 'board' board.boardtype board.id %}">{{ board.title }}</a></td>
+                                <td>{{ board.num_threads }}</td>
+                                <td>{{ board.last_thread }}</td>
+                                <td>{{ board.last_post }}</td>
+                            </tr>
+                            {% endif %}
+                        {% endfor %}
+                    </tbody>
+                 </table>
+            </div>
+        </div> <!-- close panel -->
+    </div>
+    {% endif %}
+    
+    {% if resource_boards %}
+    <div class="hero-unit">
+        {% if main_forum %}<h3><a href="{% url 'forum_type' 'resource' %}">Resource Forum</a></h3>
+        {% else %}<h3>Resource Forum</h3>
+        {% endif %}
+        <div class="row panel-body">
+            <div class="span10 table-responsive" style="margin-left:0px">
+                <table id="resourceBoardTable" class="table table-striped table-bordered" cellspacing="0" width="100%">
+                    <thead>
+                        <tr>
+                            <th>Board Name</th>
+                            <th>Number of Threads</th>
+                            <th>Last Thread</th>
+                            <th>Last Post</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for board in resource_boards %}
+                            {% if board.restricted != 1 %}
+                            <tr>
+                                <td><a href="{% url 'board' board.boardtype board.resource.id %}">{{ board.title }}</a></td>
+                                <td>{{ board.num_threads }}</td>
+                                <td>{{ board.last_thread }}</td>
+                                <td>{{ board.last_post }}</td>
+                            </tr>
+                            {% endif %}
+                        {% endfor %}
+                    </tbody>
+                 </table>
+            </div>
+        </div> <!-- close panel -->
+    </div>
+    {% endif %}        
+    
 </div>
+
+{% if not main_forum %}
+<!-- scripts for tables -->
+<script type="text/javascript">
+$(document).ready(function(){
+    $('#{{ datatable }}').DataTable();
+});
+</script>
+{% endif %}
 
 {% endblock %}
