--- a/django_project/templates/notifications/list.html
+++ b/django_project/templates/notifications/list.html
@@ -5,12 +5,38 @@
     <p>{{ notification.timestamp }}</p>
     {% if notification.verb == "created" %}
         <p>You created a resource: <a href="{% url 'resource_view' notification.action_object.id %}">{{  notification.action_object.name }}</a></p>
+    
     {% elif notification.verb == "evolved" %}
         <p>Your resource (<a href="{% url 'resource_view' notification.target.id %}">{{  notification.target.name }}</a>) has been {{ notification.verb }}: <a href="{% url 'resource_view' notification.action_object.id %}">{{  notification.action_object.name }}</a></p>
+    
     {% elif notification.verb == 'downloaded' %}
         <p>Your resource (<a href="{% url 'resource_view' notification.action_object.id %}">{{  notification.action_object.name }}</a>) has been {{ notification.verb }}{{ notification.level }}</p>
+    
     {% elif notification.verb == 'want2talk' %}
-        <p>Someone new wants to talk about: <a href="{% url 'resource_view' notification.action_object.id %}#want2tal">{{  notification.action_object.name }}</a></p>
+        <p>Someone new wants to talk about: <a href="{% url 'resource_view' notification.action_object.id %}#want2talk">{{  notification.action_object.name }}</a></p>
+    
+    {% elif notification.verb == 'rated' %}
+        <p>Someone has rated: <a href="{% url 'thread' 'resource' notification.action_object.board.resource.id notification.action_object.id %}">{{ notification.action_object.board.title }}</a></p>
+    
+    {% elif notification.verb == 'questioned' %}
+        <p>Someone asked a question about: <a href="{% url 'thread' 'resource' notification.action_object.board.resource.id notification.action_object.id %}">{{ notification.action_object.board.title }}</a></p>
+    
+    {% elif notification.verb == 'discussed' %}
+        {% if notification.action_object.board.boardtype == "resource" %}
+        <p>Someone started a discussion about: <a href="{% url 'thread' notification.action_object.board.boardtype notification.action_object.board.resource.id notification.action_object.id %}">{{ notification.action_object.board.title }}</a></p>
+        {% else %}
+        <p>Someone started a discussion about: <a href="{% url 'thread' notification.action_object.board.boardtype notification.action_object.board.id notification.action_object.id %}">{{ notification.action_object.board.title }}</a></p>
+        {% endif %}
+    
+    {% elif notification.verb == 'replied' %}
+        {% if notification.action_object.board.boardtype == "resource" %}
+        <p>Someone replied to: <a href="{% url 'thread' notification.action_object.board.boardtype notification.action_object.board.resource.id notification.action_object.id %}">{{ notification.action_object.title }}</a></p>
+        {% else %}
+        <p>Someone replied to: <a href="{% url 'thread' notification.action_object.board.boardtype notification.action_object.board.id notification.action_object.id %}">{{ notification.action_object.title }}</a></p>
+        {% endif %}
+        
+    {% else %}
+        <p>{{notification.action_object}}{{notification.verb}}</p>
     {% endif %}
     </div>
     {% endfor %}
