--- a/django_project/static/css/treasure.css
+++ b/django_project/static/css/treasure.css
@@ -86,3 +86,10 @@ a.btn {
 #main > section {
     margin-top: 1%;
 }
+
+.small-notification  {
+    display:inline !important;
+    font-size:1em !important;
+    padding-left:1;
+    padding-right:1;
+}
