--- a/django_project/templates/treasure/forum.html
+++ b/django_project/templates/treasure/forum.html
@@ -9,7 +9,7 @@ a
 {% block body_block %}
 
 <div class="span11">
-    {% if level_boards or general_boards or resource_boards %}{% else %}<div class="hero-unit"><h4>No Boards in Forum</h4></class>{% endif %}
+    {% if level_boards or general_boards or resource_boards %}{% else %}<div class="hero-unit"><h4>No Boards in Forum</h4></div>{% endif %}
 
     {% if level_boards %}
     <div class="hero-unit">
