--- a/django_project/templates/treasure/register.html
+++ b/django_project/templates/treasure/register.html
@@ -28,9 +28,11 @@
                 {% endfor %}
 
                 {% for field in user_form.visible_fields %}
+                {% if field.label != "Captcha" %}
                     {{ field.errors }}
                     {{field.label}}{% render_help_text field %}<br/>
                     {{ field }}<br/>
+                {% endif%}
                 {% endfor %}
                 
                 {% for hidden in teacher_form.hidden_fields %}
@@ -41,13 +43,22 @@
                     {{ field.errors }}
                     {{field.label}}{% render_help_text field %}<br/>
                     {{ field }}
-                    {% if field.label == "School" %}
+                    {% if field.label == "School*" %}
                     <a class="btn btn-info pull-right" href="{% url 'add_school' %}?register">Add School</a>
                     {% elif field.label == "Hubs" %}
                     <a class="btn btn-info pull-right" href="{% url 'add_hub' %}?register">Add Hub</a>
                     {% endif %}
                     <br/>
                 {% endfor %}
+
+                {% for field in user_form.visible_fields %}
+                {% if field.label == "Captcha" %}
+                    {{ field.errors }}
+                    {{field.label}}{% render_help_text field %}<br/>
+                    {{ field }}<br/>
+                {% endif%}
+                {% endfor %}
+
 
                 <br/>
                 <button class="btn btn-primary" type="submit" name="submit" tabindex='1'>Register</button>
